--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,9 @@
- #container{
-      background-color: #e5e5e5;
-    /*  background-image: url(images/background.jpg);
-      background-size: 100% 100vh;*/
+    body{
+      /*background-color: #e5e5e5;*/
+      background-image: url(../images/background9.jpg);
+      background-size: 100% 100vh;
+      background-repeat: no-repeat;
+    background-attachment: fixed;
       padding: 0px;
       margin:0px;
     }
@@ -149,8 +151,9 @@ strong{
    position:relative;
    float: right;
    text-decoration-line: none;
+   font-weight: bold;
 }
-.badge1[data-badge]:after {
+/*.badge1[data-badge]:after {
    content:attr(data-badge);
    position:absolute;
    top:-10px;
@@ -163,7 +166,8 @@ strong{
    line-height:18px;
    border-radius:50%;
    box-shadow:0 0 1px #333;
-}
+   
+}*/
 .collapsible {
     background-color:white;
     color: black;
@@ -190,9 +194,15 @@ strong{
     float: left;
     text-align: left;
 }
-small{
-  color: grey;
-  font-size: 11px;
+.tip{
+  color: red;
+  font-size: 12px;
+  /*margin-top:20px;*/
+  line-height: 20px;
+}
+.date{
+  color: gray;
+  font-size: 12px;
   /*margin-top:20px;*/
   line-height: 20px;
 }
