navigation and landing page modification

--- a/UI/css/login.css
+++ b/UI/css/login.css
@@ -7,7 +7,7 @@
 
 
     }
-         .navbar {
+     .navbar {
       /*height: 60px;*/
     overflow: hidden;
     background-color:#E91E63;
@@ -38,6 +38,7 @@
     color: white;
 }
 .title{
+ 
   color:white;
   font-weight: bold;
   text-align: center;
@@ -61,7 +62,8 @@ padding: 0px;padding-left:10px;
         width: 50%;
         min-width: 500px;
         background-color: white;
-        min-height:400px;
+        min-height:320px;
+
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
         /*border-radius:5px;*/
         margin:50px auto 0 auto;
@@ -69,7 +71,7 @@ padding: 0px;padding-left:10px;
         display: flex;
 
       }
-      input[type=text], select {
+      input[type=email], select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -78,7 +80,7 @@ padding: 0px;padding-left:10px;
     border-radius: 4px;
     box-sizing: border-box;
 }
-  input[type=email], select {
+input[type=password], select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -87,15 +89,7 @@ padding: 0px;padding-left:10px;
     border-radius: 4px;
     box-sizing: border-box;
 }
-  input[type=password], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
+
 input[type=submit] {
     width: 100%;
     background-color: #4CAF50;
@@ -123,7 +117,7 @@ flex:3;
    position: relative;
 }
 .description{
-  margin: 100px auto 0 auto;
+  margin: 30px auto 0 auto;
   text-align: center;
   color: white;
   padding: 10px;
@@ -133,6 +127,12 @@ p{
 }
 .link{
   float:right;
+  margin: 20px;
+}
+.forgot{
+  float:left;
+  margin: 20px;
+   margin-left: 0px;
 }
 .img{
   width: 100px;
