--- a/UI/css/profile.css
+++ b/UI/css/profile.css
@@ -61,6 +61,10 @@ form{
     background:#FF4081;
     color: white;
 }
+.selected {
+    background:#FF4081;
+    color: white;
+}
 .title{
   color:white;
   font-weight: bold;
@@ -69,7 +73,14 @@ form{
   font-size:20px;
   margin: 2px;
 }
-
+.title a{
+   float: left;
+padding: 0px;padding-left:10px;
+}
+.title a:hover{
+  background-color: #E91E63;
+/*padding: 0px;padding-left:10px*/
+}
 /*input[type=submit]:hover {
     background-color: #45a049;
 }*/
