--- a/UI/css/home.css
+++ b/UI/css/home.css
@@ -37,6 +37,20 @@
     background:#FF4081;
     color: white;
 }
+.title a{
+   float: left;
+padding: 0px;padding-left:10px;
+}
+.title a:hover{
+  background-color: #E91E63;
+/*padding: 0px;padding-left:10px*/
+}
+.selected {
+    background:#FF4081;
+    color: white;
+}
+
+
       .container{
          width: 50%;
         min-width: 500px;
@@ -185,17 +199,27 @@ strong{
 .active, .collapsible:hover {
     background-color: #F8BBD0;
 }
+.collapsible:after {
+    content: '\002B';
+    color: black;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+}
 
+.active:after {
+    content: "\2212";
+}
 .content {
+
     padding: 0 18px;
-    display: none;
+    max-height: 0;
     overflow: hidden;
-    background-color: white;
-    float: left;
-    text-align: left;
+    transition: max-height 0.2s ease-out;
+    background-color:white;
 }
 .tip{
-  color: red;
+  color: gray;
   font-size: 12px;
   /*margin-top:20px;*/
   line-height: 20px;
