--- a/UI/css/login.css
+++ b/UI/css/login.css
@@ -90,7 +90,7 @@ input[type=password], select {
     box-sizing: border-box;
 }
 
-input[type=submit] {
+input[type=button] {
     width: 100%;
     background-color: #4CAF50;
     color: white;
