--- a/UI/css/profile.css
+++ b/UI/css/profile.css
@@ -87,7 +87,7 @@ padding: 0px;padding-left:10px;
       .reminder{
 
         width:48%;
-        min-width: 500px;
+        min-width: 320px;
         background-color: white;
         min-height:300px;
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
@@ -98,7 +98,8 @@ padding: 0px;padding-left:10px;
         padding: 10px;
         margin-bottom:50px;
       }
-      .card2{
+       @media(min-width: 600px){
+        .card2{
         width: 50%;
         min-width: 500px;
         /*background-color: white;*/
@@ -112,6 +113,31 @@ padding: 0px;padding-left:10px;
         /*padding: 10px;*/
 
       }
+       .change{
+        /*width: 50%;*/
+        /*min-width: 500px;*/
+        background-color: white;
+        /*float: left*/
+        /*min-height:300px;*/
+        /*height:400px;*/
+        box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
+        /*border-radius:5px;*/
+        /*margin:50px auto 0 auto;*/
+        /*padding:5px;*/
+        /*display: flex;*/
+        padding: 10px;
+        width:50%;
+        margin: 10px;
+        padding: 10px;
+
+      }
+ .details{
+        /*height:400px;*/
+        width: 50%;
+        /*margin: 10px;*/
+      }
+      }
+      
       .count1{
         /*width: 50%;*/
         /*min-width: 500px;*/
@@ -172,14 +198,14 @@ padding: 0px;padding-left:10px;
         /*padding:5px;*/
         /*display: flex;*/
         padding: 10px;
-        width:50%;
+        width:90%;
         margin: 10px;
         padding: 10px;
 
       }
       .details{
         /*height:400px;*/
-        width: 50%;
+        width: 90%;
         /*margin: 10px;*/
       }
       .header{
@@ -273,4 +299,5 @@ input[type=time], select {
 }
 .content{
   width: 100%;
+  /*margin: 5px;*/
 }
