--- a/UI/css/sign_up.css
+++ b/UI/css/sign_up.css
@@ -57,16 +57,32 @@ padding: 0px;padding-left:10px;
     background:#FF4081;
     color: white;
 }
-      .card{
+     @media(min-width: 600px){
+        .card{
         width: 50%;
         min-width: 500px;
         background-color: white;
-        min-height:400px;
+        min-height:320px;
+
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
         /*border-radius:5px;*/
         margin:50px auto 0 auto;
         /*padding:5px;*/
         display: flex;
+
+      }
+      }
+      .card{
+        width: 50%;
+        min-width: 360px;
+        background-color: white;
+        min-height:320px;
+
+        box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
+        /*border-radius:5px;*/
+        margin:50px auto 0 auto;
+        /*padding:5px;*/
+        /*display: wrap;*/
 
       }
       input[type=text], select {
