--- a/UI/css/index.css
+++ b/UI/css/index.css
@@ -6,41 +6,24 @@
       padding: 0px;
       margin:0px;
      }
-  /*   .container{
-      width: 100%;
-      height: 100vh;
-      background-color: black;
-      opacity: 0.6;
-      position: fixed;
-      z-index: -1;
-     }*/
      .about{
       color: white;
       text-align: center;
       margin:50px;
-      /*z-index: 99999;*/
-
      }
      h1{
       font-size: 72px;
      }
 
      .navbar {
-      /*height: 60px;*/
     overflow: hidden;
     background-color:#E91E63;
-    /*position: fixed; */
-    /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
+    top: 0;
+    width: 100%;
 
 }
 
-/* Links inside the navbar */
 .navbar a {
-  /*height: 60px;*/
-  /*line-height: 60px;*/
-    /*float: left;*/
     display: block;
     color: #f2f2f2;
     text-align: center;
@@ -49,8 +32,6 @@
     font-weight: bold;
     float: right;
 }
-
-/* Change background on mouse-over */
 .navbar a:hover {
     background:#FF4081;
     color: white;
