--- a/UI/css/profile.css
+++ b/UI/css/profile.css
@@ -1,5 +1,4 @@
 #container{
-      /*background-color: #e5e5e5;*/
       background-image: url(../images/background4.jpg);
       background-size: 100% 100vh;
          background-repeat: no-repeat;
@@ -32,21 +31,15 @@ form{
   margin-top:30px;
 }
 .navbar {
-      /*height: 60px;*/
     overflow: hidden;
     background-color:#E91E63;
-    /*position: fixed; */
-    /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
+    top: 0;
+    width: 100%; 
 
 }
 
-/* Links inside the navbar */
 .navbar a {
-  /*height: 60px;*/
-  /*line-height: 60px;*/
-    /*float: left;*/
+
     display: block;
     color: #f2f2f2;
     text-align: center;
@@ -55,8 +48,6 @@ form{
     font-weight: bold;
     float: right;
 }
-
-/* Change background on mouse-over */
 .navbar a:hover {
     background:#FF4081;
     color: white;
@@ -79,11 +70,9 @@ padding: 0px;padding-left:10px;
 }
 .title a:hover{
   background-color: #E91E63;
-/*padding: 0px;padding-left:10px*/
+
 }
-/*input[type=submit]:hover {
-    background-color: #45a049;
-}*/
+
       .reminder{
 
         width:48%;
@@ -102,29 +91,15 @@ padding: 0px;padding-left:10px;
         .card2{
         width: 50%;
         min-width: 500px;
-        /*background-color: white;*/
+        
         min-height:300px;
-        /*box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);*/
-        /*border-radius:5px;*/
         margin:30px auto 0 auto;
-
-        /*padding:5px;*/
         display: flex;
-        /*padding: 10px;*/
 
       }
        .change{
-        /*width: 50%;*/
-        /*min-width: 500px;*/
         background-color: white;
-        /*float: left*/
-        /*min-height:300px;*/
-        /*height:400px;*/
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
-        /*border-radius:5px;*/
-        /*margin:50px auto 0 auto;*/
-        /*padding:5px;*/
-        /*display: flex;*/
         padding: 10px;
         width:50%;
         margin: 10px;
@@ -132,33 +107,20 @@ padding: 0px;padding-left:10px;
 
       }
  .details{
-        /*height:400px;*/
         width: 50%;
-        /*margin: 10px;*/
       }
       }
       
       .count1{
-        /*width: 50%;*/
-        /*min-width: 500px;*/
         background-color: white;
-        /*float: left*/
-        /*min-height:300px;*/
         height:150px;
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
-        /*border-radius:5px;*/
-        /*margin:50px auto 0 auto;*/
-        /*padding:5px;*/
-        /*display: flex;*/
         padding: 10px;
         width:80%;
         margin: 10px;
         border-bottom-style: solid;
         border-bottom-color:red;
         border-bottom-width: 10px
-
-     
-
       }
       .number{
       width: 100%;
@@ -166,37 +128,17 @@ padding: 0px;padding-left:10px;
       font-size: 82px;
       }
       .count2{
-        /*width: 50%;*/
-        /*min-width: 500px;*/
         background-color: white;
-        /*float: left*/
-        /*min-height:300px;*/
         height:150px;
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
-        /*border-radius:5px;*/
-        /*margin:50px auto 0 auto;*/
-        /*padding:5px;*/
-        /*display: flex;*/
         padding: 10px;
         width:80%;
         margin: 10px;
 
       }
-     /* .change{
-        margin-left:20px;
-      }*/
         .change{
-        /*width: 50%;*/
-        /*min-width: 500px;*/
         background-color: white;
-        /*float: left*/
-        /*min-height:300px;*/
-        /*height:400px;*/
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
-        /*border-radius:5px;*/
-        /*margin:50px auto 0 auto;*/
-        /*padding:5px;*/
-        /*display: flex;*/
         padding: 10px;
         width:90%;
         margin: 10px;
@@ -204,9 +146,7 @@ padding: 0px;padding-left:10px;
 
       }
       .details{
-        /*height:400px;*/
         width: 90%;
-        /*margin: 10px;*/
       }
       .header{
         transform: translateY(-60px);
@@ -218,11 +158,9 @@ padding: 0px;padding-left:10px;
       }
       .label{
         color: gray;
-        /*margin: 5px;*/
 
       }
       .container {
-    /*display: block;*/
     float: left;
     position: relative;
     padding-left: 35px;
@@ -235,15 +173,11 @@ padding: 0px;padding-left:10px;
     -ms-user-select: none;
     user-select: none;
 }
-
-/* Hide the browser's default checkbox */
 .container input {
     position: absolute;
     opacity: 0;
     cursor: pointer;
 }
-
-/* Create a custom checkbox */
 .checkmark {
     position: absolute;
     top: 0;
@@ -253,29 +187,21 @@ padding: 0px;padding-left:10px;
     background-color: #eee;
 }
 
-/* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
     background-color: #ccc;
 }
 
-/* When the checkbox is checked, add a blue background */
 .container input:checked ~ .checkmark {
     background-color: #2196F3;
 }
-
-/* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after {
     content: "";
     position: absolute;
     display: none;
 }
-
-/* Show the checkmark when checked */
 .container input:checked ~ .checkmark:after {
     display: block;
 }
-
-/* Style the checkmark/indicator */
 .container .checkmark:after {
     left: 9px;
     top: 5px;
@@ -299,5 +225,4 @@ input[type=time], select {
 }
 .content{
   width: 100%;
-  /*margin: 5px;*/
 }
