--- a/UI/css/sign_up.css
+++ b/UI/css/sign_up.css
@@ -60,29 +60,22 @@ padding: 0px;padding-left:10px;
      @media(min-width: 600px){
         .card{
         width: 50%;
-        min-width: 500px;
+        min-width: 350px;
         background-color: white;
         min-height:320px;
-
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
-        /*border-radius:5px;*/
         margin:50px auto 0 auto;
-        /*padding:5px;*/
         display: flex;
 
       }
       }
       .card{
         width: 50%;
-        min-width: 360px;
+        min-width: 350px;
         background-color: white;
         min-height:320px;
-
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
-        /*border-radius:5px;*/
         margin:50px auto 0 auto;
-        /*padding:5px;*/
-        /*display: wrap;*/
 
       }
       input[type=text], select {
@@ -131,6 +124,7 @@ input[type=submit]:hover {
     border-radius: 5px;
     padding: 20px;
     flex:4;
+    margin:10px;
 }
 .logo{
 flex:3;
@@ -158,7 +152,6 @@ p{
 .footer{
    position: absolute;
   bottom:0px;
-   /*position: relative;*/
   color: white;
   font-weight: bold;
   font-size:12px;
