--- a/UI/css/home.css
+++ b/UI/css/home.css
@@ -6,38 +6,61 @@
       padding: 0px;
       margin:0px;
     }
-    .navbar {
-    overflow: hidden;
-    background-color:#E91E63;
-    top: 0; 
-    width: 100%;
 
-}
-.navbar a {
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-weight: bold;
-    float: right;
-}
-.navbar a:hover {
-    background:#FF4081;
-    color: white;
-}
-.title a{
-   float: left;
-padding: 0px;padding-left:10px;
-}
-.title a:hover{
+.topnav {
+  overflow: hidden;
   background-color: #E91E63;
 }
-.selected {
+
+.topnav a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+   font-weight: bold;
+  font-size: 17px;
+}
+
+.topnav a:hover {
     background:#FF4081;
     color: white;
 }
 
+.selected {
+  background-color: #FF4081;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .logout{
+    clear:both; 
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 
       .container{
 
@@ -120,7 +143,7 @@ button {
 .new{
   display: flex;
 }
-@media(min-width: 600px) {
+@media(min-width: 750px) {
  .flex{
    display: flex;
   width: 100%;
@@ -220,4 +243,7 @@ input[type=submit] {
   line-height:40px;
   font-size:20px;
   margin: 2px;
+}
+.edit{
+  display: none;
 }
