--- a/UI/css/profile.css
+++ b/UI/css/profile.css
@@ -30,47 +30,59 @@ input[type=submit] {
 form{
   margin-top:30px;
 }
-.navbar {
-    overflow: hidden;
-    background-color:#E91E63;
-    top: 0;
-    width: 100%; 
-
-}
-
-.navbar a {
-
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-weight: bold;
-    float: right;
-}
-.navbar a:hover {
-    background:#FF4081;
-    color: white;
-}
-.selected {
-    background:#FF4081;
-    color: white;
-}
-.title{
-  color:white;
-  font-weight: bold;
-  text-align: center;
-  line-height:40px;
-  font-size:20px;
-  margin: 2px;
-}
-.title a{
-   float: left;
-padding: 0px;padding-left:10px;
-}
-.title a:hover{
+.topnav {
+  overflow: hidden;
   background-color: #E91E63;
+}
 
+.topnav a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+   font-weight: bold;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+    background:#FF4081;
+    color: white;
+}
+
+.selected {
+  background-color: #FF4081;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .logout{
+    clear:both; 
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 
       .reminder{
