--- a/UI/css/sign_up.css
+++ b/UI/css/sign_up.css
@@ -7,60 +7,70 @@
 
 
     }
-         .navbar {
-      /*height: 60px;*/
-    overflow: hidden;
-    background-color:#E91E63;
-    /*position: fixed; */
-    /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
-
-}
-
-/* Links inside the navbar */
-.navbar a {
-  /*height: 60px;*/
-  /*line-height: 60px;*/
-    /*float: left;*/
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-weight: bold;
-    float: right;
-}
-
-/* Change background on mouse-over */
-.navbar a:hover {
-    background:#FF4081;
-    color: white;
-}
-.title{
-  color:white;
-  font-weight: bold;
-  text-align: center;
-  line-height:40px;
-  font-size:20px;
-  margin: 2px;
-}
-.title a{
-   float: left;
-padding: 0px;padding-left:10px;
-}
-.title a:hover{
+         .topnav {
+  overflow: hidden;
   background-color: #E91E63;
-/*padding: 0px;padding-left:10px*/
 }
-.selected {
+
+.topnav a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+   font-weight: bold;
+  font-size: 17px;
+}
+
+.topnav a:hover {
     background:#FF4081;
     color: white;
+}
+
+.active {
+  background-color: #FF4081;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 700px) {
+  .logo .img{
+    display: none
+  }
+  .logo{
+    display: none
+  }
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .login{
+    clear:both; 
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
      @media(min-width: 600px){
         .card{
         width: 50%;
-        min-width: 350px;
+        min-width: 320px;
         background-color: white;
         min-height:320px;
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
@@ -71,7 +81,7 @@ padding: 0px;padding-left:10px;
       }
       .card{
         width: 50%;
-        min-width: 350px;
+        min-width: 320px;
         background-color: white;
         min-height:320px;
         box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
@@ -105,7 +115,7 @@ padding: 0px;padding-left:10px;
     border-radius: 4px;
     box-sizing: border-box;
 }
-input[type=submit] {
+input[type=button] {
     width: 100%;
     background-color: #4CAF50;
     color: white;
